deploy/bootstrap/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd-server
  name: argocd-server-nodeport
  namespace: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
